production/kubernetes/manifests/exporters.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-exporter
  namespace: flores-victoria
  labels:
    app: postgres-exporter
spec:
  ports:
    - port: 9187
      targetPort: 9187
  selector:
    app: postgres-exporter

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-exporter
  namespace: flores-victoria
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres-exporter
  template:
    metadata:
      labels:
        app: postgres-exporter
    spec:
      containers:
        - name: postgres-exporter
          image: quay.io/prometheuscommunity/postgres-exporter:v0.10.0
          ports:
            - containerPort: 9187
---
apiVersion: v1
kind: Service
metadata:
  name: redis-exporter
  namespace: flores-victoria
  labels:
    app: redis-exporter
spec:
  ports:
    - port: 9121
      targetPort: 9121
  selector:
    app: redis-exporter

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-exporter
  namespace: flores-victoria
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis-exporter
  template:
    metadata:
      labels:
        app: redis-exporter
    spec:
      containers:
        - name: redis-exporter
          image: oliver006/redis_exporter:v1.43.0
          ports:
            - containerPort: 9121
---
apiVersion: v1
kind: Service
metadata:
  name: mongodb-exporter
  namespace: flores-victoria
  labels:
    app: mongodb-exporter
spec:
  ports:
    - port: 9216
      targetPort: 9216
  selector:
    app: mongodb-exporter

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb-exporter
  namespace: flores-victoria
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongodb-exporter
  template:
    metadata:
      labels:
        app: mongodb-exporter
    spec:
      containers:
        - name: mongodb-exporter
          image: percona/mongodb_exporter:0.30.0
          ports:
            - containerPort: 9216
